feat: 新增用户资源模块
